--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,17 +25,17 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-        <a href="{{ site.github.repository_url }}" class="btn">GitHub</a>
+        <a href="https://github.com/fast-geek/Android-Tool" class="btn">GitHub</a>
         <a href="https://t.me/android_tooI" class="btn">Telegram</a>
-        <a href="{{ site.github.zip_url }}" class="btn">Download Release</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download Source code</a>
+        <a href="https://github.com/fast-geek/Android-Tool/releases/download/1.1.0/Android-Tool-v1.1.0.jar" class="btn">Download Release</a>
+        <a href="https://github.com/fast-geek/Android-Tool/archive/1.1.0.zip" class="btn">Download Source code</a>
     </header>
 
     <main id="content" class="main-content" role="main">
       {{ content }}
 
       <footer class="site-footer">
-          <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
+          <span class="site-footer-owner">Android-Tool site is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
       </footer>
     </main>
   </body>
