--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <a href="https://github.com/fast-geek/Android-Tool" class="btn">GitHub</a>
         <a href="https://t.me/android_tooI" class="btn">Telegram</a>
         <a href="https://github.com/fast-geek/Android-Tool/releases/download/1.1.0/Android-Tool-v1.1.0.jar" class="btn">Download Release</a>
-        <a href="https://github.com/fast-geek/Android-Tool/archive/" <a href="1.1.0.zip"</a> class="btn">Download Source code</a>
+        <a href="https://github.com/fast-geek/Android-Tool/archive/" <a href="1.1.0.zip"> class="btn">Download Source code</a>
     </header>
 
     <main id="content" class="main-content" role="main">
