--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,9 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         <a href="https://github.com/fast-geek/Android-Tool" class="btn">GitHub</a>
         <a href="https://t.me/android_tooI" class="btn">Telegram</a>
-        <a href="https://github.com/fast-geek/Android-Tool/releases/download/{{ page.version | default: site.version }}/Android-Tool-v1.1.0.jar" class="btn">Download Release</a>
-        <a href="https://github.com/fast-geek/Android-Tool/archive/1.1.0.zip" class="btn">Download Source code</a>
+        <a href="https://t.me/android_tooI_chat" class="btn">Chat</a>
+        <a href="https://github.com/fast-geek/Android-Tool/releases/download/{{ page.version | default: site.version }}/Android-Tool-v{{ page.version | default: site.version }}.jar" class="btn">Download Release</a>
+        <a href="https://github.com/fast-geek/Android-Tool/archive/{{ page.version | default: site.version }}.zip" class="btn">Download Source code</a>
     </header>
 
     <main id="content" class="main-content" role="main">
