--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
         <a href="https://t.me/android_tooI" class="btn">Telegram</a>
         <a href="https://t.me/android_tooI_chat" class="btn">Telegram Chat</a>
         <a href="https://github.com/fast-geek/Android-Tool/releases/download/{{ page.version | default: site.version }}/Android-Tool.jar" class="btn">Download Release</a>
+        <a href="https://files.lavender.ml/AT/Android-Tool.jar" class="btn">Nightly Build</a>
         <a href="https://github.com/fast-geek/Android-Tool/archive/{{ page.version | default: site.version }}.zip" class="btn">Download Source code</a>
     </header>
 
